# libsc

./: meson.build  meson_options.txt
iniparser/: meson.build
libb64/: meson.build
src/: meson.build  sc.h  sc_config.h.in
